# ItemEditor

./: CHANGELOG.md  README.md  pyproject.toml
src/endstone_itemeditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/itemeditor/: __init__.py  main.py
src/itemeditor/commands/: __init__.py  command_handler.py
src/itemeditor/managers/: __init__.py  item_manager.py
src/itemeditor/resources/: Item.yml
src/itemeditor/utils/: __init__.py  color.py  item_serializer.py
src/jungganmyeon_itemeditor/: __init__.py  main.py
src/jungganmyeon_itemeditor/commands/: __init__.py  command_handler.py
src/jungganmyeon_itemeditor/managers/: __init__.py  config_manager.py  item_manager.py
src/jungganmyeon_itemeditor/utils/: __init__.py  color.py  item_serializer.py
