[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endstone-itemeditor"
version = "1.0.0"
description = "Custom item editor plugin for Endstone Bedrock Server"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jung Ganmyeon", email = "jungganmyeon@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["endstone>=0.10.0", "ruamel.yaml>=0.18.0"]

[project.entry-points."endstone"]
itemeditor = "serverdev_itemeditor.main:ItemEditor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
serverdev_itemeditor = ["resources/*.yml"]
