[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endstone-itemeditor"
version = "1.0.0"
description = "Custom item editor plugin for Endstone Bedrock Server"
readme = "README.md"
requires-python = ">=3.10"

authors = [
{ name = "Jung Ganmyeon", email = "[jungganmyeon@gmail.com](mailto:jungganmyeon@gmail.com)" }
]

license = { text = "MIT" }

dependencies = [
"endstone>=0.10.0",
"ruamel.yaml>=0.18.0"
]

[project.entry-points."endstone"]
itemeditor = "jungganmyeon_itemeditor.main:ItemEditor"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jungganmyeon_itemeditor = ["resources/*.yml"]

[tool.setuptools.include-package-data]
include-package-data = true
